--- a/VillageDefence/VillageDefence.csproj
+++ b/VillageDefence/VillageDefence.csproj
@@ -10,6 +10,11 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
+  
+  <ItemGroup>
+    <None Remove="Assets\Village.ico" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
@@ -22,5 +27,9 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Views\BuildingView.axaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\BattleView.axaml" />
   </ItemGroup>
 </Project>
